[gd_scene load_steps=3 format=3 uid="uid://clxj8scvon2dq"]

[ext_resource type="Script" uid="uid://dxe86l5f0kk7m" path="res://scripts/MainMenu.gd" id="1_main_menu"]
[ext_resource type="Texture2D" uid="uid://cpwderyqrtjds" path="res://art/menu_sprites.png" id="2_menu_texture"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.85, 0.75, 0.6, 1)

[node name="TitleSprite" type="Sprite2D" parent="."]
position = Vector2(360, 200)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_menu_texture")
region_enabled = true
region_rect = Rect2(0, 0, 1024.75, 442.5)

[node name="PlayButtonSprite" type="Sprite2D" parent="."]
position = Vector2(359, 438)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_menu_texture")
region_enabled = true
region_rect = Rect2(96.875, 425.016, 827.719, 263.25)

[node name="PlayButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 160.0
offset_top = 390.0
offset_right = 560.0
offset_bottom = 510.0
flat = true

[node name="ChallengesButtonSprite" type="Sprite2D" parent="."]
position = Vector2(359, 597)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_menu_texture")
region_enabled = true
region_rect = Rect2(101.938, 685.735, 817.594, 227.812)

[node name="ChallengesButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 160.0
offset_top = 550.0
offset_right = 560.0
offset_bottom = 650.0
flat = true

[node name="PirateFlagSprite" type="Sprite2D" parent="."]
position = Vector2(373, 892.25)
scale = Vector2(0.7, 1.0939)
texture = ExtResource("2_menu_texture")
region_enabled = true
region_rect = Rect2(89.2812, 1126.17, 883.406, 410.062)

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 1250.0
offset_right = 710.0
offset_bottom = 1270.0
theme_override_colors/font_color = Color(0.5, 0.4, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "Phase 1 v0.1"
horizontal_alignment = 2
